--- a/.github/workflows/generate-scp-entry.yml
+++ b/.github/workflows/generate-scp-entry.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   generate-and-deploy:
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
