--- a/.github/workflows/generate-scp-entry.yml
+++ b/.github/workflows/generate-scp-entry.yml
@@ -36,8 +36,8 @@ jobs:
 
       - name: Create and switch to gh-pages branch
         run: |
-          git checkout -b gh-pages
-          git pull origin gh-pages || true
+          git fetch origin gh-pages
+          git checkout -B gh-pages origin/gh-pages
 
       - name: Copy generated files
         run: |
@@ -51,4 +51,4 @@ jobs:
         run: |
           git add -f scp/entries
           git commit -m "Add new SCP entry and update index" || echo "No changes to commit"
-          git push origin gh-pages
+          git push origin gh-pages || git pull --rebase origin gh-pages && git push origin gh-pages
